I actually fixed the geo API url. (In the previous commit I realized that the url was broken in the deployed site, but since the live server was working I thought I had already added a fix to my local code. But I had not.) I also made a function to log the user's search history in local storage.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2 {
 
 .dayTables {
   display: flex;
-  flex: row;
+  justify-content: end;
 }
 
 .individualTables {
@@ -78,4 +78,15 @@ footer {
   background-color: darkcyan;
   border: solid;
   /* border-color: ; */
+}
+
+img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.weatherIconAndLabel {
+  display: flex;
+  align-items: center;
 }
